--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 }
 
 body {
-  background-color: '#474747';
+  background: #021622;
+  color: #fff;
   margin: 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
